[package]
name = "painted-palette-mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crc = "3.0.1"
nix = "0.26.2"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
wait-timeout = "0.2.0"
